--- a/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
@@ -1,7 +1,14 @@
-* Description
+* Torus 
 
-#  The VR Solution
-The early days of Virtual Reality have revealed a fundamental flaw in the user experience, and it's among the core reasons why this budding technology is not yet widespread. Much like a computer without a mouse, Virtual Reality without the Tours can be a clumsy and indirect experience for the user. 
+** Tag
+VR Energy Flow
+
+** The VR Solution
+The early days of Virtual Reality revealed a core flaw in user experience. Like a computer without a mouse, Virtual Reality without the Tours is clumsy and indirect for new users. 
+
+** Making Nature Virtual 
+
+Energy flow occurs in the same manner at all universal scales. Known scientifically as toroidal flow, it's the energy moves through and around our planet and all life within it. Embedded in our perception of our physical world surroundings is this ,  movement of energy, we  The Torus is Completely immersed in the technology,  
 
 
 # Making Nature Virtual
