Revised Infinite for April Launch

--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
@@ -5,20 +5,20 @@ As content creators transition to VR they're met with the challenge of presentat
 
 ** Welcome Inside
 
-The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates user movement. Remove your finger to stop movement. Continue like this to navigate the entire architectural structure. Just as in the real world, users can move their head to access 360-degree viewing. 
+The experience begins in a space custom-designed for content display. A finger against the VR touchpad initiates movement. Remove your finger to stop moving. Continue like this to navigate the entire architectural structure. Just as in the real world, users can move their head to access 360-degree viewing.
 
 ** What to Display
 
-Capable of hosting an unlimited content library, The Infinite Gallery is prepared for original display ideas. You may hang products on the wall, show content behind glass window panes, create the doorway to another dimension, or build the second floor of your company's customized structure. 
+Capable of hosting an unlimited content library, The Infinite Gallery is prepared for original display ideas. Hang products on the wall, show content behind glass window panes, create doorways to varying dimensions, or build the second floor of your company’s customized structure.
 
 ** In Business
 
-This interface is immediately applicable for basic 3D marketing. Regardless of file type, any visual content can be ported into the Infinite Gallery. Photographers wishing to display in 3D, galleries scaling beyond their physical location, and 3D artists creating VR-ready content from scratch are among the early adopters. 
+This interface is immediately applicable for basic 3D marketing. Regardless of file type, any visual content ports to The Infinite Gallery. Photographers displaying in 3D, galleries scaling beyond a physical location, and 3D artists creating VR-ready content from scratch are among early adopters.
 
 ** Provide Access
 
-At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his "Five and Dime" drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical and emotional between his goods and his customers.  
+At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his “Five and Dime” drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth decided to display drugstore products on publicly accessible shelves, initiating a physical and emotional connection between goods and customers.
 
-** Show Your Story 
+** Show Your Story
 
-The Infinite Gallery is a linear display interface in 3D. Upon reaching the end of your story, the user has connected with the feeling of your brand.
+The Infinite Gallery is a linear display interface in 3D. Upon reaching the end of your story, the user has connected with your brand.
