Updated for April launch

--- a/Pages/1Solutions/3Publications/Financial Strat/Finstrat---4web.org
+++ b/Pages/1Solutions/3Publications/Financial Strat/Finstrat---4web.org
@@ -4,10 +4,12 @@ Strategy Development
 
 * Second
 
-XR can be a tool to reduce internal costs, or increase sales.   You understand your industry.  We understand XR. 
-
+XR is both an internal training solution for reducing cost and a marketing tool for driving revenue. Bring you industry understanding to us and together we'll devise your XR strategy. 
+ 
 * Abstract
-Together, we can devise and execute a plan to disrupt modern methods, accelerate business and earn a measurable return on the time, money and resources we invest.
+As new techs do, XR is disrupting markets, accelerating business development, and earning a measurable return on time, money, and resources.
+
+These are the industries in which we've created in-depth financial strategies for XR solutions:
 
 - Hotels
 - Live Stream (phys Event)
