Edited right panel home page

--- a/Pages/0Homepage [DONE]/homepage---4web.org
+++ b/Pages/0Homepage [DONE]/homepage---4web.org
@@ -3,10 +3,7 @@
 /Dream Awake/ 
  
 ** Content 
-We provide XR Media solutions for businesses. 
- 
-Our work includes design, development and deployment. 
+We provide XR Media solutions for businesses. Our work includes sourcing development, production management, and market entry.
 
-
-
- 
+** Right Panel
+XR technologies are already increasing revenue and decreasing internal costs in most industries. Visit our "Consultation" page to read about XR's influence on entertainment, retail, travel, healthcare, journalism, marketing and many others.
