--- a/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/Infinite Gallery [DONE]/infinite_goLIVE.org
@@ -17,7 +17,7 @@ This interface is immediately applicable for basic 3D marketing. Regardless of f
 
 ** Provide Access
 
-At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his “Five and Dime” drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth decided to display drugstore products on publicly accessible shelves, initiating a physical and emotional connection between goods and customers.
+At the beginning of the 20th century, F.W. Woolworth altered retail marketing. Before the advent of his “Five and Dime” drugstores, the customer requested a product, the clerk retrieved it, and the transaction took place. Woolworth was the first to display drugstore products on publicly accessible shelves, initiating a physical and emotional connection between goods and customers. 100 years later it remains a global display standard in retail.
 
 ** Show Your Story
 
