--- a/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/*Torus[DONE]/Torus_page_text_goLIVE.org
@@ -4,7 +4,7 @@
 Energetic Mobility
 
 ** The VR Solution
-The early days of Virtual Reality revealed a flaw in user experience. Like a computer without a mouse, Virtual Reality without the Torus is clumsy. 
+The early days of Virtual Reality revealed a flaw in user experience. Like a computer without a mouse, Virtual Reality without the Torus is clumsy. Inspired by VR's fully immersive nature, we developed the Torus to reflect real world energy flow.
 
 ** Making Nature Virtual 
 
