--- a/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/colorxr_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/colorxr_goLIVE.org
@@ -1,33 +1,22 @@
 * XR Color
+
 ** Tagline 
 Live in Color 
 
 ** Abstract
-Currently, designers and developers create immersive worlds off a 2D screen, a barrier between process and product. XR color immerses the human consciousness in a 3D color object and grants interaction with any color on the spectrum. 
+Currently, designers and developers create immersive worlds by working off a 2D screen. There lies a natural incoherence between tool and product. XR Color immerses human consciousness in a 3D color object and grants interaction with any color on the spectrum. 
 
-**** Choosing color 
+** Choosing color 
 
-Users can move three-dimensionally. Vertical movement alters lightness (polar north representing pure white south pure black). Rotation around the polar axis adjusts hue. Altering horizontal depth changes saturation. Complementary colors are available at the reciprocal distance and angle from center. Any color and it's complimentary form are always within reach. Initiating color adjustments may occur in reaction to optical focus, controller clicks, or adjusting a virtual wristband.
+Users can move three-dimensionally. Vertical movement alters lightness (polar north representing pure white and south pure black). Rotation around the polar axis adjusts hue. Altering horizontal depth changes saturation. Complementary colors are available at the reciprocal distance and angle from center. Any of the interactive options (optical focus, controller click, or a virtual wristband) may initiate interaction. As more designers and developers interact with color in 3D, richer and more color-coordinated content will result. Eventually, we'll experience a Virtual world resembling the color and texture of the physical world.
 
-***** Benefits: 
+** Understanding Color: 
 
-A tool for designers, artists, teachers, schools, architects to access color in the most complete way. 
+Although color is a foundational component of human sight, how and why our eyes perceive it is often misunderstood. Integrating this Virtual object with academic programs adds a tangible element to the relationship between student and study. Making XR Color available to the general public through VR app stores democratizes this form of immersive education and enhances our understanding of the human sense of sight. 
 
-**** Understanding Color: 
+** Pleasure & Wellness
 
-Color is embedded in every visual, yet most people have not had the opportunity to understand why or how our eyes perceive it. By presenting this 3D spectrum as an immersive and interactive experience, the average user innately becomes more educated about color and thus about their own sense of sight.
+For close to a millenium, humans have practiced various forms of chromotherapy. In some cases, colors are portrayed onto varying body parts to increase blood flow and cleanse anatomical systems. Other methods of chromotherapy work by exposing the eye to specific colors for specific time intervals. XR Color is a new form of accessing chromotherapy.
 
-***** Benefits: 
-
-More designers and developers will gain a deeper understanding of color, creating richer and more color-coordinated content for all technology users to experience. Eventually, this will lead to a Virtual World that can more closely resemble the color and texture of the physical world. 
-
-**** Pleasure & Wellness of Color
-
-For close to a millenium, chromotherapy has been practiced in various forms at various points throughout the world. In some cases colors are portrayed onto certain parts of the body to increase blood flow and cleanse the anatomical system. Other methods of chromotherapy are best received when the human eye perceives certain colors as a form of visual treatment. 
-
-***** Benefits: 
-
-As we step into XR color, we access an entirely new component of chromotherapy, as the user is now /surrounded/ by various colors from different hues, saturations, and forms of light. This opens the door for a new version of exploring chromotherapy in a way that hasn't previously been available. 
-
-The 3D element of XR color also means designers and developers are up out of their chair, standing and moving around to select and experiment with color. The wellness and creative benefits of this energy exertion positively influence the health of people whose careers are based in computer-generated design and development. 
+The health benefits of XR Color span widely, elevating the computer programmer and graphic designer out of their chair - initiating movement, blood flow, and precise access to their paint.
  
