Spring Launch update

--- a/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/colorxr_goLIVE.org
+++ b/Pages/1Solutions/1Products/Jan Launch/ColorXR [Done]/colorxr_goLIVE.org
@@ -16,7 +16,7 @@ Although color is a foundational component of human sight, how and why our eyes 
 
 ** Pleasure & Wellness
 
-For close to a millenium, humans have practiced various forms of chromotherapy. In some cases, colors are portrayed onto varying body parts to increase blood flow and cleanse anatomical systems. Other methods of chromotherapy work by exposing the eye to specific colors for specific time intervals. XR Color is a new form of accessing chromotherapy.
+For close to a millennium, humans have practiced various forms of chromotherapy. In some cases, colors are portrayed onto varying body parts to increase blood flow and cleanse anatomical systems. Other methods of chromotherapy work by exposing the eye to specific colors for specific time intervals. XR Color is a new form of accessing chromotherapy.
 
 The health benefits of XR Color span widely, elevating the computer programmer and graphic designer out of their chair - initiating movement, blood flow, and precise access to their paint.
  
