--- a/Pages/1Solutions/2Consultation/1Industry/industrysolutiosntext---4web.org
+++ b/Pages/1Solutions/2Consultation/1Industry/industrysolutiosntext---4web.org
@@ -5,7 +5,7 @@ Industry Solutions
 
 * Second
 
-People of every industry are finding solutions to their gravest challenges by producing immersive (XR) media content.  Share, communicate and learn faster than ever.  
+People of every industry are finding solutions to their most stubborn challenges by producing immersive (XR) media content.  Share, communicate, and learn faster than ever.  
 
 * Abstract
 
