update community web text

--- a/Pages/3About nova/1Who we are/Community---4web.org
+++ b/Pages/3About nova/1Who we are/Community---4web.org
@@ -3,7 +3,13 @@
 Community
 
 * Second 
-Our open door philosophy attracts a range of people from various communities. This makes the Nova Studios an idea hub to be crafted into market opportunities. 
+Our open door philosophy attracts a range of people from varying communities. This makes Nova Studios an idea hub for crafting market opportunities. 
+
+** Redu Media
+Redu is making obsolescence obsolete. A close member of Nova's family, Redu is dedicated to upcycling materials that would otherwise go to waste. Amber and Kaya lead /rescues/, traveling throughout the tri state area to collect materials and prevent them from going to landfill. Back inside Redu's design studio, the materials are tastefully crafted into furniture and applied art.
+
+** Potential Synergy 
+At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is /Dreamscaping/ - a principle designed to eliminate the dizzyness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and longterm memory. As users succeed within the game, they become closer and closer to 
 
 
 * Abstract
