--- a/Pages/3About nova/1Who we are/Community---4web.org
+++ b/Pages/3About nova/1Who we are/Community---4web.org
@@ -9,7 +9,24 @@ Our open door philosophy attracts a range of people from varying communities. Th
 Redu is making obsolescence obsolete. A close member of Nova's family, Redu is dedicated to upcycling materials that would otherwise go to waste. Amber and Kaya lead /rescues/, traveling throughout the tri state area to collect materials and prevent them from going to landfill. Back inside Redu's design studio, the materials are tastefully crafted into furniture and applied art.
 
 ** Potential Synergy 
-At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is /Dreamscaping/ - a principle designed to eliminate the dizzyness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and longterm memory. As users succeed within the game, they become closer and closer to 
+At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is /Dreamscaping/ - a principle designed to eliminate the dizzyness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and longterm memory. As users succeed within the game, they become closer and closer to obtaining real Ethereum. 
+
+** Construct Studios   
+With a basis in both San Fran and New York City, Construct studios has built one of the most trafficked VR worlds available to the public - /The Price of Freedom/. They're a team of game developers working to bring XR to varying fields: Medicine, Education, and Industry. https://construct.studio/
+
+** Aptonomy 
+Aptonomy is a premiere aerial protection service leading the movement into Drone-based security systems.
+
+** Con Body 
+Coss Marte was serving a seven year prison sentence when doctors told him he could die in the prison cell if he didn't take control of his health. While incarcerated, he designed a physical fitness program and began building toward peak physical condition. Once released, Coss built the current ConBody workout facility in the Lower East Side of Manhattan. Today, you can visit Coss and the former prisoners who work with him. They'll put you through your paces. In a 30 or 60 minute workout, you'll experience the sights, sounds, and workout regimen of the incarcerated. Be ready. 
+https://www.youtube.com/watch?v=3npsu-wnL6o
+
+** Studio 404 
+Micah creates awesome 3D designs in Tiltbrush 
+http://www.art404.com/
+
+** Clinken Films  
+Jon is a storyteller. He began as a writer and stage actor and has spread his storytelling skills with artificial intelligence and Virtual Reality. He's currently developing an interactive story, releasing an episode each week. VR, AI, and snail mail are all forms included. 
 
 
 * Abstract
