--- a/Pages/3About nova/1Who we are/Community---4web.org
+++ b/Pages/3About nova/1Who we are/Community---4web.org
@@ -8,6 +8,8 @@ Our open door philosophy attracts a range of people from varying communities. Th
 ** Redu Media
 Redu is making obsolescence obsolete. A close member of Nova's family, Redu is dedicated to upcycling materials that would otherwise go to waste. Amber and Kaya lead /rescues/, traveling throughout the tri state area to collect materials and prevent them from going to landfill. Back inside Redu's design studio, the materials are tastefully crafted into furniture and applied art.
 
+** Julie and Christiana 
+
 ** Potential Synergy 
 At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is /Dreamscaping/ - a principle designed to eliminate the dizzyness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and longterm memory. As users succeed within the game, they become closer and closer to obtaining real Ethereum. 
 
@@ -26,7 +28,9 @@ Micah creates awesome 3D designs in Tiltbrush
 http://www.art404.com/
 
 ** Clinken Films  
-Jon is a storyteller. He began as a writer and stage actor and has spread his storytelling skills with artificial intelligence and Virtual Reality. He's currently developing an interactive story, releasing an episode each week. VR, AI, and snail mail are all forms included. 
+Jon is a storyteller. He began as a writer and stage actor and has spread his storytelling skills with artificial intelligence and Virtual Reality. He's currently developing an interactive story, releasing an episode each week. VR, AI, and snail mail are all forms included.
+
+** Camp David  
 
 
 * Abstract
