--- a/August3.org
+++ b/August3.org
@@ -1,3 +1,5 @@
+** Physics Engine 
+
 - Python we can script blender 
 
 - physics engine: model some sort of physical interaction 
@@ -23,11 +25,85 @@ PHysics engine allows you to create parameters.
  + magnetism needs to be added to the objects 
  + gravity 
 
-physical laws relative to electromagnetism: electricity o
+physical laws relative to electromagnetism: electricity
 
 relativistic mechanics: gravity
 
 classical mechanics
- + mechanics: related to newton's laws: 1) action/reaction, 
+ + mechanics: related to newton's laws: 1) action/reaction,  
 
 ...
+
+** Python 
+ - Python is a succinct language. 
+- Object oriented programming 
+- Not used in VR bcause it's not performant enough 
+- Used heavily in 
+ - 1) 3D modelers: Blender allows you to script using python 
+ - 2) Allows you to code a shape by coding with python on Blender 
+ - 3) Generate the shape
+ - 4) maniputate shape into 3D model
+ - 5) could also code an animation with python 
+  + scale it, make some collisions 
+- Networking: a server in python that's going to handle the database for your VR game 
+ + if you have a subscription in your VR game of users and a database 
+ + from the V Rprogram you would talk to the server and make sure you have all the rights then modify (librarian) 
+ + python is well adapted for servers and apis 
+ + for network games, python could be well adapted, especially for games that have a python codebase already 
+- Machine Learning: 
+ + python is a default (cannonical language) 
+ + machine learning learning libraries are in python 
+ + all these machine learning tool boxes are written in C++ for performance and do their calculation on the gpu for hardware acceleration (using the GPU for rendering on screen). 
+ - In VR the calculations you do are GPU compatable (CPU is more polyvalent but doesn't allow for the specifics)
+ - data mining from python, we're going to call the c++ tool box functions from the python code (this allows for performant code with the succintness of python and the perforance of C++). 
+
+This allows you do big data and data mining. You need to store these in data bases. An API for your VR app allows you to handle the database for you and do big data analytics at the same time. Python is not so applicable to direct vr creation but it enables functionalities that VR wants in order to reach maximum performance 
+
+** C#
+
+Benefits of C#
+- Microsoft language 
+- portable language (don't need to recompile it. Virtual machine allows u to use the smae code on linux, mac, and windows 
+- Oriented programming language 
+- haskal (non-oriented programming language) 
+- C# works with a .net backend. 
+- .net: microsoft technology for making programs on windows (allowing you to span across languages) 
+
+** C++ 
+- Raw performance 
+- object oriented language that's performent 
+
+** Web XR 
+A way to display 3D inside the browser and allow to forward it into a VR headset. Allows you to make 3D applications distributable on the web. You can reach anyone who has the internet. You have 2D for free 
+
+*** Cons 
+not performent: 3D has to be less detailed (polygons). Opposite of C++. 
+- this is a good application for massive distribution 
+- For high performance you go with Unity 
+- You still need to integrate your 3D models from game engines
+- No physics engine nor view engine 
+- Java script frame work. THREE.js (allows you to make 3D programs (a bit of physics, gravity, locations, lighting). Game engine for web gl without user interface 
+- this might be convenient as web gl is written in java script and can integrate with your current back/front end in JS
+- with JS you're going to call some C++ functions. It's the web browser that gives you access to these elements 
+ + because you're accessing them through JS, you have to go through a security (sandbox). 
+ + This saps a bit of perofrmance because it needs to go through a sandbox (still using C++ under the hood) 
+
+** Game Engine 
+- Game engine allows yo to set up a scene for your application (gives you virtual space where you can work with 3D models) 
+- Allows you to set u a camera (perspective from which you're going to see 3D models
+- Allows you to handle the controllers 
+- Allows you to add physics into your scene (relies on physics engine for this)
+- Game engine ties everything together 
+ - physics engine 
+ - lighting 
+ - 3d models 
+ - cameras 
+- Allows you in a high level package to use low level specific packages in a dynamic VR experience 
+
++ unreal is performant and a bit harder to use than unity (generally used by bigger teams of developers 
++ Unity: smaller teams of developers
+
+** Prototyping 
+
+
+
